# hifi

./: README.md
android/: Dockerfile  build_android.sh  build_recipes.md  start_build_container.sh
cmake/macros/: GenerateInstallers.cmake
interface/resources/qml/: QmlWindow.qml
interface/src/avatar/: AvatarManager.cpp
libraries/controllers/src/controllers/: InputDevice.h  ScriptingInterface.cpp  ScriptingInterface.h  UserInputMapper.cpp  UserInputMapper.h
libraries/physics/src/: PhysicsEngine.cpp
plugins/: CMakeLists.txt
plugins/hapticVest/: CMakeLists.txt
plugins/hapticVest/src/: HapticVestHelpers.cpp  HapticVestHelpers.h  HapticVestManager.cpp  HapticVestManager.h  HapticVestProvider.cpp  hapticVest.json
plugins/hifiSdl2/src/: Joystick.cpp  Joystick.h
plugins/oculus/src/: OculusControllerManager.cpp  OculusControllerManager.h
plugins/openvr/src/: ViveControllerManager.cpp  ViveControllerManager.h
scripts/: testAvatarCollision.js  testHapticPulse.js  vestCollisionBox.js  vestSpawner.js
server-console/: CMakeLists.txt
